<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{a1d38112-47b7-41b0-8ea3-49043c5689fd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	aLights		AT %Q*	: ARRAY [1..8] OF BOOL;
	aSwitches	AT %I*	: ARRAY [1..8] OF BOOL;
	iPot		AT %I*	: INT;

//	input1	AT %I*	: BOOL;
//	output1 AT %Q*	: BOOL;

	timer1sec: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>